lots of things i forgot

--- a/Nasa Wallpaper Core/Nasa Wallpaper Core.csproj
+++ b/Nasa Wallpaper Core/Nasa Wallpaper Core.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>Nasa_Wallpaper_Core</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
